@@ -1,3 +1,7 @@
+2001-02-06  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/spec39.C: New test.
+
 2001-02-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20010202-1.c: New test.
